<resources>
    <string name="app_name">SjceLeave</string>
    <string name="clgName1">St. Joesph\'s College of Engineering</string>
    <string name="clgName2">St. Joesph\'s Institute of Technology</string>
    <string name="user1">User Name :</string>
    <string name="pass1">Password :</string>
    <string name="user">Enter User Name</string>
    <string name="pass">Enter Password</string>
    <string name="login">Login</string>
    <string name="love">Designed By CSE Dept</string>
    <string name="signin">Already Have an Account? Sign in here</string>
    <string name="register">Not Registered? Sign Up Here</string>
    <string name="signup">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="whoareyou">Who Are You? </string>

    <!-- Form Strings !-->
    <string name="entername">Enter Name</string>
    <string name="enterrollno">Enter Roll No.</string>
    <string name="leavetaken">Leave Taken So Far</string>
    <string name="days">Days</string>
    <string name="reason">Reason</string>
    <string name="enterdate">Enter Date</string>
    <string name="from">From</string>
    <string name="to">TO</string>
    <string name="or">(Or)</string>
    <string name="leave">Leave :</string>
    <string name="absent">Absent :</string>
    <string name="pl">Privilege Leave :</string>
    <string name="ml">Medical Leave :</string>
    <string name="totdays">TOTAL DAYS    :</string>
    <string name="reason1"> REASON          :</string>
    <string name="la">LEAVE APPLICATION</string>
    <string name="submit">SUBMIT</string>

    <string-array name="whoiam">
        <item>Student</item>
        <item>Counselor</item>
        <item>HOD</item>
    </string-array>

    <string-array name="year">
        <item>Select Year</item>
        <item>1st Year</item>
        <item>2nd Year</item>
        <item>3rd Year</item>
        <item>4th Year</item>
    </string-array>

    <string-array name="course">
        <item>Select Course</item>
        <item>BE</item>
        <item>B.Tech</item>
        <item>MBA</item>
    </string-array>

    <string-array name="ugpg">
        <item>UG/PG</item>
        <item>UG</item>
        <item>PG</item>
    </string-array>

    <string-array name="Section">
        <item>Select Section</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>
    <string-array name="Branch">
        <item>Select Branch</item>
        <item>CSE</item>
    </string-array>
    <string name="title">Leave Application</string>
</resources>
