<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity">


    <EditText
        android:id="@+id/name"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/entername"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
            android:id="@+id/rollno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:autofillHints=""
            android:hint="@string/enterrollno"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

    <Spinner
        android:id="@+id/course"
        android:layout_width="164dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:entries="@array/course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollno" />

    <Spinner
        android:id="@+id/year"
        android:layout_width="189dp"
        android:layout_height="42dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:entries="@array/year"
        app:layout_constraintEnd_toStartOf="@+id/section"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/branch" />

    <Spinner
        android:id="@+id/section"
        android:layout_width="198dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:entries="@array/Section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/branch" />

    <Spinner
        android:id="@+id/branch"
        android:layout_width="208dp"
        android:layout_height="37dp"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:entries="@array/Branch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course" />

    <EditText
        android:id="@+id/leavesofar"
        android:autofillHints=""
        android:layout_width="216dp"
        android:layout_height="51dp"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="97dp"
        android:layout_marginRight="97dp"
        android:ems="10"
        android:hint="@string/leavetaken"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/section" />

    <EditText
        android:id="@+id/medicalleaveet"
        android:autofillHints=""
        android:layout_width="64dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/days"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leavesofar" />

    <TextView
        android:id="@+id/medicalleave"
        android:autofillHints=""
        android:layout_width="127dp"
        android:layout_height="23dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:text="@string/ml"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/medicalleaveet"
        app:layout_constraintTop_toBottomOf="@+id/leavesofar" />

    <EditText
        android:id="@+id/prileaveet"
        android:autofillHints=""
        android:layout_width="68dp"
        android:layout_height="36dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:ems="10"
        android:hint="@string/days"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicalleaveet" />

    <TextView
        android:id="@+id/prileave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/pl"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/prileaveet"
        app:layout_constraintTop_toBottomOf="@+id/medicalleave" />

    <TextView
        android:id="@+id/absent"
        android:layout_width="78dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/absent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leave" />

    <EditText
        android:id="@+id/leaveet"
        android:autofillHints=""
        android:layout_width="78dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/days"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/leave"
        app:layout_constraintTop_toBottomOf="@+id/leavesofar" />

    <TextView
        android:id="@+id/leave"
        android:autofillHints=""
        android:layout_width="77dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/leave"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leavesofar" />

    <EditText
        android:id="@+id/absentet"
        android:autofillHints=""
        android:layout_width="76dp"
        android:layout_height="38dp"
        android:ems="10"
        android:hint="@string/days"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/absent"
        app:layout_constraintTop_toBottomOf="@+id/leaveet" />

    <EditText
        android:id="@+id/totdayset"
        android:autofillHints=""
        android:layout_width="221dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:ems="10"
        android:hint="@string/days"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prileave" />

    <TextView
        android:id="@+id/reason"
        android:autofillHints=""
        android:layout_width="135dp"
        android:layout_height="23dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/reason1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totdays" />

    <EditText
        android:id="@+id/reasonet"
        android:autofillHints=""
        android:layout_width="223dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:ems="10"
        android:hint="@string/reason"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totdayset" />

    <TextView
        android:id="@+id/totdays"
        android:autofillHints=""
        android:layout_width="137dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/totdays"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/absent" />

    <EditText
        android:id="@+id/todate"
        android:autofillHints=""
        android:layout_width="169dp"
        android:layout_height="44dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:ems="10"
        android:hint="@string/to"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/submitbtn"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/or"
        android:autofillHints=""
        android:layout_width="32dp"
        android:layout_height="21dp"
        android:layout_marginEnd="164dp"
        android:layout_marginRight="164dp"
        android:layout_marginBottom="19dp"
        android:text="@string/or"
        app:layout_constraintBottom_toTopOf="@+id/todate"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/enterdate"
        android:autofillHints=""
        android:layout_width="162dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:ems="10"
        android:hint="@string/enterdate"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/fromdate"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/fromdate"
        android:autofillHints=""
        android:layout_width="163dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:ems="10"
        android:hint="@string/from"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/submitbtn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/la"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submitbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginLeft="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/ugpg"
        android:layout_width="161dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:entries="@array/ugpg"
        app:layout_constraintEnd_toStartOf="@+id/course"
        app:layout_constraintTop_toBottomOf="@+id/rollno" />

</androidx.constraintlayout.widget.ConstraintLayout>